--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sumapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://diunii228.github.io/TextSummarizer",
+  "homepage": "https://minhanh9422.github.io/MI322",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
